<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_FeedbackComau" Id="{67e65f5a-09da-45af-8ba0-400ad797715c}">
    <Declaration><![CDATA[TYPE ST_FeedbackComau :
STRUCT
	q: ARRAY[0..2] OF LREAL;
	q_t: ARRAY[0..2] OF LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>