<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_RxUdpComau" Id="{c8927105-2b52-4c62-8440-64ae879b8686}">
    <Declaration><![CDATA[TYPE ST_RxUdpComau :
STRUCT
	frameCounter : DINT := 0;
	q 		: ARRAY [0..5] OF REAL;
	qDot 	: ARRAY [0..5] OF REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>