<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_TxUdpComau" Id="{718ac812-77d2-4d76-9651-16cee5a52121}">
    <Declaration><![CDATA[TYPE ST_TxUdpComau :
STRUCT
	udpKey : DINT := 0;
	cmnd : DINT; // 0: SETTLED, 1: ENGAGED
	qDotRef : ARRAY [0..5] OF REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>